<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_information"
        android:title="@string/menu_info"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hello"
        android:title="@string/menu_hello"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dialogue"
        android:title="@string/menu_dialogue"
        android:icon="@drawable/ic_action_dialogue"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contacts"
        android:title="@string/menu_contacts"
        android:icon="@drawable/ic_action_contacts"
        android:orderInCategory="400"
        app:showAsAction="ifRoom" />

</menu>