<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.leonbaird.activites02.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_info"/>

    <EditText
        android:id="@+id/main_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="textCapSentences|textAutoComplete|textAutoCorrect|text"
        android:hint="@string/main_edittext_hint" />

    <Button
        android:onClick="passDataToNextActivity"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_passon"
        android:layout_gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/main_button_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button_openactivity"/>

        <Button
            android:id="@+id/main_button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_button_openandsend"/>

    </LinearLayout>

</LinearLayout>
